--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
-p {
-    text-align: center;
+.cover-container {
+    background-image: url(background.jpg) !important;
+    background-image: cover;
 }
